fix(searchCriteria): fix component alignment

--- a/css/itsm2.scss
+++ b/css/itsm2.scss
@@ -1152,7 +1152,6 @@ div.chip > p {
 #searchcriteria {
     text-align: center;
     margin-inline: auto;
-    width: 50%;
 
     ul {
         padding-left: 0;
